# dsai413-multimodal-rag

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  eval_report.md  pyproject.toml
app/: streamlit_app.py
docs/: DESIGN.md
rag_core/: __init__.py  api_retry.py  config.py  models.py
rag_core/embeddings/: gemini_embedder.py
rag_core/eval/: compare.py  judge.py  metrics.py  vidore_eval.py
rag_core/generation/: base.py  gemini.py  prompts.py
rag_core/ingest/: chunker.py  hf_loader.py  indexer.py  multimodal_parser.py
rag_core/pipeline/: router.py
rag_core/retrieval/: pinecone_store.py  retriever.py
report/: technical_report.md
scripts/: day1_probe.py
tests/: conftest.py  test_chunker.py  test_embedder.py  test_metrics.py  test_parser.py  test_retriever.py  test_router.py  test_smoke.py
